# toolbox

./: README.md
anki_obsidian/: main.py  test.py
obs2anki/: pyproject.toml
obs2anki/src/: main.py  parsing.py
